Fixed z-index

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -2,7 +2,7 @@
 
 .sky-navbar {
   position: relative;
-  z-index: 1;
+  z-index: 10;
 }
 
 .hero-info {
